--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="offers">
         <p><a href="#">Minhas Ofertas</a></p>
       </div>
-      <div class="user-block">
+      <div class="user-block active">
         <p>Ola! <a href="#">Entrar</a> ou <a href="#">Cadastre-se</a></p>
       </div>
     </header>
