--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p><a href="#">Minhas Ofertas</a></p>
       </div>
       <div class="user-block active">
-        <p>Ola! <a href="#">Entrar</a> ou <a href="#">Cadastre-se</a></p>
+        <p>Ola! <a href="#">Entrar</a> ou <span>Cadastre-se</span></p>
       </div>
     </header>
     <div class="account">
